# Genius-Invokation-TCG_Dice

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.zh-CN.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
